Add frontend bucket properties because AWS changed defaults.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NX_QUERY_ENDPOINT=https://<apiGatewayId>.execute-api.us-east-2.amazonaws.com/prod/graphql
-NX_SUBSCRIPTION_ENDPOINT=wss://<apiGatewayId>.execute-api.us-east-2.amazonaws.com/prod
+NX_QUERY_ENDPOINT=https://<apiGatewayId>.execute-api.<region>.amazonaws.com/prod/graphql
+NX_SUBSCRIPTION_ENDPOINT=wss://<apiGatewayId>.execute-api.<region>.amazonaws.com/prod
